--- a/Abschlussprojekt_kayzed/index (2).html
+++ b/Abschlussprojekt_kayzed/index (2).html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +8,12 @@
 </head>
 <body>
     <script src=https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js></script>
+    <script src=LivingCreature.js></script>
     <script src=rasendestroyer.js></script>
     <script src=setup.js></script>
     <script src=gras.js></script>
     <script src=main.js></script>
     <script src=virus.js></script>
-    <script src=buttons.js></script>
+
 </body>
 </html>
